Proper Playlist synchronization. Remove all Offline Content Menu Bar item. Fix crashes when modifying playlists (related to missing ViewState EnvironmentObject). Smaller changes.

--- a/TidalSwift/Base.lproj/Main.storyboard
+++ b/TidalSwift/Base.lproj/Main.storyboard
@@ -334,6 +334,13 @@
                                                 <action selector="logout:" target="Voe-Tx-rLC" id="XcD-d4-fyY"/>
                                             </connections>
                                         </menuItem>
+                                        <menuItem isSeparatorItem="YES" id="WE8-MI-3Wg"/>
+                                        <menuItem title="Remove all Offline Content" id="oIg-R8-gJJ">
+                                            <modifierMask key="keyEquivalentModifierMask"/>
+                                            <connections>
+                                                <action selector="removeAllOfflineContent:" target="Voe-Tx-rLC" id="gXW-B7-Yb9"/>
+                                            </connections>
+                                        </menuItem>
                                     </items>
                                 </menu>
                             </menuItem>
